--- a/package.json
+++ b/package.json
@@ -5,12 +5,12 @@
   "scripts": {
     "start": "parcel index.html",
     "build": "parcel build index.html"
-
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "^1.3.4"
+    "axios": "^1.3.4",
+    "build": "^0.1.4"
   },
   "devDependencies": {
     "buffer": "^5.7.1",
