--- a/package.json
+++ b/package.json
@@ -3,14 +3,13 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "start": "parcel index.html",
-    "build": "parcel build index.html"
+    "start": "parcel src/index.html",
+    "build": "parcel build src/index.html"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "^1.3.4",
-    "build": "^0.1.4"
+    "axios": "^1.3.4"
   },
   "devDependencies": {
     "buffer": "^5.7.1",
