--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.3.4"
   },
   "devDependencies": {
+    "@parcel/transformer-sass": "^2.8.3",
     "buffer": "^5.7.1",
     "parcel": "^2.8.3"
   }
